tests-integration/tests/snapshots/lowering__do_fn_not_in_scope.snap
---
source: tests-integration/tests/lowering.rs
assertion_line: 161
expression: lowered.errors
---
[
    NotInScope(
        ExprVariable {
            id: AstId<syntax::cst::ExpressionVariable>(12),
        },
    ),
]
