tests-integration/tests/snapshots/lowering__negate_not_in_scope.snap
---
source: tests-integration/tests/lowering.rs
assertion_line: 209
expression: lowered.errors
---
[
    NotInScope(
        NegateFn {
            id: AstId<syntax::cst::ExpressionNegate>(8),
        },
    ),
]
