tests-integration/tests/snapshots/lowering__non_cycle_ordering.snap
---
source: tests-integration/tests/lowering.rs
assertion_line: 111
expression: "(terms, types)"
---
(
    [
        Base(
            Idx::<TermItem>(2),
        ),
        Base(
            Idx::<TermItem>(1),
        ),
        Base(
            Idx::<TermItem>(0),
        ),
    ],
    [],
)
