tests-integration/tests/snapshots/lowering__non_recursive_kinds.snap
---
source: tests-integration/tests/lowering.rs
expression: lowered.errors
---
[
    NotInScope(
        TypeConstructor {
            id: AstId<syntax::cst::TypeConstructor>(14),
        },
    ),
    NotInScope(
        TypeConstructor {
            id: AstId<syntax::cst::TypeConstructor>(19),
        },
    ),
]
