tests-integration/tests/snapshots/lowering__operator_cycle.snap
---
source: tests-integration/tests/lowering.rs
assertion_line: 83
expression: "(terms, types)"
---
(
    [
        Mutual(
            [
                Idx::<TermItem>(1),
                Idx::<TermItem>(0),
            ],
        ),
    ],
    [
        Mutual(
            [
                Idx::<TypeItem>(1),
                Idx::<TypeItem>(0),
            ],
        ),
    ],
)
