tests-integration/tests/snapshots/lowering__recursive_kinds_errors.snap
---
source: tests-integration/tests/lowering.rs
assertion_line: 238
expression: groups.cycle_errors
---
[
    RecursiveKinds(
        RecursiveGroup {
            group: [
                Idx::<TypeItem>(1),
                Idx::<TypeItem>(0),
            ],
        },
    ),
    RecursiveKinds(
        RecursiveGroup {
            group: [
                Idx::<TypeItem>(3),
                Idx::<TypeItem>(2),
            ],
        },
    ),
]
