tests-integration/tests/snapshots/lowering__recursive_synonym_errors.snap
---
source: tests-integration/tests/lowering.rs
assertion_line: 137
expression: groups.cycle_errors
---
[
    RecursiveSynonym(
        RecursiveGroup {
            group: [
                Idx::<TypeItem>(1),
                Idx::<TypeItem>(0),
            ],
        },
    ),
    RecursiveSynonym(
        RecursiveGroup {
            group: [
                Idx::<TypeItem>(2),
            ],
        },
    ),
]
